@@ -1,4 +1,5 @@
 2010-01-25
+ - Port(s) are now created according to the module settings
  - added int ports(int type) to DataAbstractModule, with this function the view 
    (read class Module : public QGraphicsItem) can query via the model how many Port(s)
    are needed per type.
